# fpetprep

./: .gitignore  Dockerfile  README.md  docsallation.rst  fslinstaller3.py  ica.py  mni.py  parser.py  pvc.py  suvr.py  test.xlsx  workflow.py  wrapper.py
dcm2bids/: udcm2bids.py  udcmview.py
docs/: installation.rst  usage.rst
docs/source/: conf.py  index.rst
fpetprep/: ica.py  mni.py  parser.py  pvc.py  suvr.py
fpetprep/dcm2bids/: udcm2bids.py  udcmview.py
fpetprep/template/: mni152_aal_labels_iso2mm.csv  mni152_aal_labels_iso2mm.json
fpetprep/utils/: bids_validate.py  ica_utils.py
fpetprep_wrapper/: fpetprep_wrapper.py  setup.py  test_AttentionSEResUNet.ipynb  test_Attention_detect_UNet-.ipynb  wrapper.py
udcm2bids/: udcm2bids.py  udcmview.py
utils/: bids.py
wrapper/: setup.cfg
