[metadata]
name = fpetprep-docker
description = A wrapper for generating Docker commands using regular fpetprep syntax

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = fpetprep_docker

[options.entry_points]
console_scripts = 
	fpetprep-docker=python fpetprep_wrapper:main

[bdist_wheel]
universal=1

[flake8]
max-line-length = 99